2008-12-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Proper signed to unsigned conversion for 64 bit LSB images.

2008-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/Makefile.am: When X11 is disabled, don't compile the
	X11-specific source modules.  Don't ever install any X11-related
	header files.

2008-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Use 'double' rather than 64-bit
	integer to accumulate totalized values.  Make the cluster summary
	report more concise.

2008-12-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Fix for 64 bit images.

2008-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Cluster threshold is expressed
	as a percentage of total cluster pixels.  Optimize for larger
	images.

2008-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Accelerate using OpenMP.

2008-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Remove some arbitrary
	argument length limits.  Pass -convolve argument without any
	additional checking.  Verify that strings are not truncated during
	copy.
	(ListFiles): Be more memory efficient.
	* magick/fx.c (ConvolveImage): Fix formatting problem when logging
	the convolution kernel used.
	* magick/utility.c (TranslateTextEx): Support formatting huge
	comment text.

2008-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Don't process opacity channel
	unless image has one.
	* magick/effect.c (MotionBlurImage): Use
	AcquireOnePixelByReference() rather than AcquireImagePixels() to
	retrieve one pixel.  This is much more efficient.
	(AdaptiveThresholdImage): Don't process opacity channel unless
	image has one.
	(BlurImage): Don't process opacity channel unless image has one.

2008-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
