@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020081207"
+#define public MagickPackageVersionAddendum ".020081208"
 #define public MagickPackageReleaseDate "unreleased"
