@@ -21,6 +21,20 @@
 </tr>
 </table>
 <p>
+2008-12-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.
+
+</UL>
+<p>
+2008-12-07  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
+
+<UL>
+  <LI> coders/fits.c: Proper signed to unsigned conversion for 64 bit LSB images.
+
+</UL>
+<p>
 2008-12-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
